src/index.scss
@charset "utf-8";

$button-disabled-background-color: hsl(0, 0%, 4%);
$button-disabled-opacity: 0.2;

@import "bulma";

html,
body {
  height: 100vh;
  overflow: hidden;
}

.app {
  height: 100vh;
  overflow: hidden;
  display: flex;
  flex-direction: column;
}

/* Layout */

.navbar {
  flex-shrink: 0;
  border-bottom: 1px solid $grey-darker;
  min-height: 0;
}

.navbar-menu {
  flex: 1;
  display: flex;
  align-items: center;
}

.navbar-brand,
.navbar-item {
  min-height: 0 !important;
}

.navbar-end {
  flex: 1;
  justify-content: flex-end;
  align-items: center;
  flex-wrap: wrap;
  gap: 0.25rem 0.75rem;
}

.content-area {
  height: 100%;
}

/* NavBar styles */

.navbar .title {
  font-size: 1.55rem;
  line-height: 1.05;
  margin-bottom: 0;
}

.button,
.button:focus {
  background-color: $black;
  border-color: $grey-dark;
  color: $grey-dark;
}

.navbar .navbar-item {
  padding: 0.35rem 0.45rem;
}

.buttons.navbar-item {
  gap: 0.35rem;
}

.buttons.navbar-item .button {
  height: 2.5rem;
  min-width: 2.5rem;
  padding: 0.45rem;
}

.buttons.navbar-item .button .icon {
  font-size: 0.95rem;
}

.start-stop-button {
  height: 2.2rem !important;
  min-width: 2.2rem !important;
  padding: 0.35rem !important;
}

.button:hover {
  border-color: $grey;
  color: $grey;
}

.fa-play {
  color: $green;
}

.fa-stop {
  color: $red;
}

.fa-up-down,
.fa-left-right {
  color: $grey;
}

.editing .fa-pencil,
.vertically-flipped .fa-up-down,
.horizontally-flipped .fa-left-right {
  color: $yellow;
}

.slider > span {
  margin-right: 0.5em;
  color: $grey-light;
  font-size: 0.92rem;
  white-space: nowrap;
}

.buttons .dropdown {
  margin-right: 0.5rem;
}

input[type="range"] {
  width: 78px;
}

/* Content styles */

.content {
  overflow: auto;
  background-color: $black;
  border: none;
  outline: none;
  width: 100%;
  height: 100%;
  color: $white;
  padding: 0;
  line-height: inherit;
}

.content:focus {
  outline: none;
}

div.content {
  cursor: default;
}

.final-transcript {
  color: $grey-darker;
}

.interim-transcript {
  color: $yellow;
}

.content > span:hover {
  color: $red !important;
}

